--- a/mylist02.ipynb
+++ b/mylist02.ipynb
@@ -40288,7 +40288,7 @@
         "import datetime\n",
         "import re\n",
         "\n",
-        "tart3 =0\n",
+        "tart3 =0   # This is for cumulation for days of leap years\n",
         "\n",
         "def leap_year(year):\n",
         "    if (year % 4) == 0:\n",
@@ -40305,7 +40305,7 @@
         "\n",
         "for cikl in range(1,109):\n",
         "  \n",
-        "    file  = open(\"BP_d.txt\", 'r')\n",
+        "    file  = open(\"BP_d.txt\", 'r') # because this is a list in every cicle have to open again\n",
         "    year = 1900 + cikl\n",
         "    head=\"head\"+str(cikl)\n",
         "    tart1 = 1  + (cikl-1)*365 +tart3\n",
@@ -40328,7 +40328,7 @@
         "                    \n",
         "    format = \"%Y-%m-%d\"\n",
         "\n",
-        "    for i in range(len(head)):\n",
+        "    for i in range(len(head)): # count which day of year, and take to the first place in the vector\n",
         "        it = head[i][:10]\n",
         "        dt = datetime.datetime.strptime(it, format)\n",
         "        tt = dt.timetuple()\n",
@@ -40348,29 +40348,6 @@
           "name": "stdout"
         }
       ]
-    },
-    {
-      "metadata": {
-        "id": "zeXujBIPi1Eb",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "cell_type": "code",
-      "source": [
-        "file  = open(\"BP_d.txt\", 'r') \n",
-        "#print(len(file))\n",
-        "for cikl in range(1,10):\n",
-        "    head=\"head\"+str(cikl)\n",
-        "    tart1 = 1 + (cikl-1)*365\n",
-        "    tart2 = tart1+365\n",
-        "    head1 = file.readlines()[1096:1461]\n",
-        "    file  = open(\"BP_d.txt\", 'r')\n",
-        "    head2 = file.readlines()[1461:1826]\n",
-        "    print ('head1',tart1, tart2, head1)\n",
-        "    print ('head2',tart1, tart2, head2)"
-      ],
-      "execution_count": 0,
-      "outputs": []
     },
     {
       "metadata": {
